tests/fixtures/pass/array_index_assignment.sali
let main(): i32 = {
  let mut values = [0]
  values[0] = 42
  values[0]
}
