tests/fixtures/fail/array_index_borrow_conflict.sali
let main(): i32 = {
  let mut values = [0]
  let alias = borrow values[0]
  values[0] = 42
  alias
}
